--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,13 @@
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme" >
         <activity
+            android:parentActivityName=".Main"
             android:name=".Main"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".ResultActivity"
-            android:label="@string/title_activity_result" >
         </activity>
     </application>
 
