--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:20.0.0'
     compile 'com.android.support:support-annotations:+'
+    compile files('libs/google-gson-2.2.4/gson-2.2.4.jar')
 }
