--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme">
         <activity
-            android:name=".Main"
+            android:name=".SplashScreen"
             android:label="@string/app_name"
             android:parentActivityName=".Main">
             <intent-filter>
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Main -->
+        <activity
+            android:name=".Main"
+            android:label="@string/app_name"/>
+
     </application>
 
 </manifest>
