--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_512"
         android:label="@string/app_name"
         android:theme="@style/CustomActionBarTheme">
         <activity
@@ -23,7 +23,7 @@
         <!-- Main -->
         <activity
             android:name=".Main"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
 
     </application>
 
