--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.2"
+    buildToolsVersion '21.1.0'
 
     defaultConfig {
         applicationId "com.menil.rottenmovies"
@@ -22,7 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:palette-v7:21.0.0'
     compile 'com.android.support:cardview-v7:21.0.0'
-    compile 'com.android.support:support-annotations:+'
+    compile 'com.android.support:support-annotations:21.0.0'
     compile files('libs/google-gson-2.2.4/gson-2.2.4.jar')
 }
