--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
-        versionName "1.0"
+        versionName "0.1-beta"
     }
     buildTypes {
         release {
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:support-annotations:21.0.0'
     compile files('libs/google-gson-2.2.4/gson-2.2.4.jar')
+    compile 'ch.acra:acra:4.5.0'
+    //compile files('libs/acra-4.5.0/acra-4.5.0.jar')
 }
