--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:support-annotations:21.0.0'
     compile files('libs/google-gson-2.2.4/gson-2.2.4.jar')
-    compile 'ch.acra:acra:4.5.0'
-    //compile files('libs/acra-4.5.0/acra-4.5.0.jar')
+    compile 'com.melnykov:floatingactionbutton:1.0.6'
+    //compile 'ch.acra:acra:4.5.0'
+    compile files('libs/acra-4.5.0/acra-4.5.0.jar')
 }
