--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
-        versionName "0.1-beta"
+        versionName "0.2-beta"
     }
     buildTypes {
         release {
@@ -26,8 +26,9 @@ dependencies {
     compile 'com.android.support:palette-v7:21.0.0'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:support-annotations:21.0.0'
-    compile files('libs/google-gson-2.2.4/gson-2.2.4.jar')
-    compile 'com.melnykov:floatingactionbutton:1.0.6'
-    //compile 'ch.acra:acra:4.5.0'
-    compile files('libs/acra-4.5.0/acra-4.5.0.jar')
+    compile files('libs/google-gson-2.2.4/gson-2.2.4.jar') //for parsing JSON
+    compile 'com.melnykov:floatingactionbutton:1.0.6' //for floating action buttons
+    compile 'ch.acra:acra:4.5.0' //for crash reports
+    compile 'com.github.traex.rippleeffect:library:1.2.2' //for ripple effects
+    //compile files('libs/acra-4.5.0/acra-4.5.0.jar')
 }
