Added some visual effects

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.0.6' //for floating action buttons
     compile 'ch.acra:acra:4.5.0' //for crash reports
     compile 'com.github.traex.rippleeffect:library:1.2.2' //for ripple effects
+    compile 'com.sothree.slidinguppanel:library:+'
 }
