--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,10 @@ dependencies {
     compile 'com.android.support:palette-v7:21.0.0'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:support-annotations:21.0.0'
-    compile files('libs/google-gson-2.2.4/gson-2.2.4.jar') //for parsing JSON
+    compile 'com.google.code.gson:gson:+' //for parsing JSON
     compile 'com.melnykov:floatingactionbutton:1.0.6' //for floating action buttons
     compile 'ch.acra:acra:4.5.0' //for crash reports
     compile 'com.github.traex.rippleeffect:library:1.2.2' //for ripple effects
     compile 'com.sothree.slidinguppanel:library:+'
+    compile 'com.koushikdutta.ion:ion:2.+'
 }
