--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
-        versionName "0.2-beta"
+        versionName "0.3-beta"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -27,16 +27,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.android.support:palette-v7:21.0.0'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:support-annotations:21.0.0'
-    compile 'com.google.code.gson:gson:+' //for parsing JSON
+    compile 'com.google.code.gson:gson:2.3' //for parsing JSON
     compile 'com.melnykov:floatingactionbutton:1.0.6' //for floating action buttons
     compile 'ch.acra:acra:4.5.0' //for crash reports
     compile 'com.github.traex.rippleeffect:library:1.2.2' //for ripple effects
     compile 'com.sothree.slidinguppanel:library:+'
     compile 'com.koushikdutta.ion:ion:2.+'
-
 
 
 }
