--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,12 @@
             android:name="com.menil.rottenmovies.Main"
             android:configChanges="screenSize|orientation"
             android:icon="@drawable/actionbar_icon"
-            android:label="@string/app_name" />
+            android:label="@string/app_name" >
+            <meta-data
+                android:resource="@xml/searchable"
+                android:name="searchable"
+                />
+            </activity>
 
         <!-- Crash report activity -->
         <activity
