--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,16 +25,17 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21.0.0'
-    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:support-annotations:21.0.0'
     compile 'com.google.code.gson:gson:2.3' //for parsing JSON
     compile 'com.melnykov:floatingactionbutton:1.0.6' //for floating action buttons
     compile 'ch.acra:acra:4.5.0' //for crash reports
     compile 'com.github.traex.rippleeffect:library:1.2.2' //for ripple effects
-    compile 'com.sothree.slidinguppanel:library:+'
-    compile 'com.koushikdutta.ion:ion:2.+'
+    compile 'com.sothree.slidinguppanel:library:+' // for details view
+    compile 'com.koushikdutta.ion:ion:2.+' //for images
+    compile 'io.realm:realm-android:0.74.0' //for database
 
 
 }
