--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,15 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.android.support:cardview-v7:21.0.0'
     compile 'com.android.support:support-annotations:21.0.0'
-    compile 'com.google.code.gson:gson:2.3' //for parsing JSON
-    compile 'com.melnykov:floatingactionbutton:1.0.6' //for floating action buttons
-    compile 'ch.acra:acra:4.5.0' //for crash reports
-    compile 'com.sothree.slidinguppanel:library:+' // for details view
-    compile 'org.lucasr.twowayview:twowayview:0.1.4' // for home
+    compile 'com.google.code.gson:gson:2.3'
+    //for parsing JSON
+    compile 'com.melnykov:floatingactionbutton:1.0.6'
+    //for floating action buttons
+    compile 'ch.acra:acra:4.5.0'
+    //for crash reports
+    compile 'com.sothree.slidinguppanel:library:+'
+    // for details view
+    compile 'org.lucasr.twowayview:twowayview:0.1.4'
+    // for home
+    compile project(':facebook')
 }
