--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
-        versionName "0.3-beta"
+        versionName "0.7-beta"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.2'
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.android.support:cardview-v7:21.0.0'
+    //compile 'com.android.support:support-v13:21.0.2'
     compile 'com.android.support:support-annotations:21.0.0'
     compile 'com.google.code.gson:gson:2.3'
     //for parsing JSON
