--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,15 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_1100"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@style/CustomActionBarTheme">
         <meta-data
             android:name="android.app.default_searchable"
             android:value="com.menil.rottenmovies.SearchActivity" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
         <activity
             android:name="com.menil.rottenmovies.SplashScreen"
@@ -34,13 +39,18 @@
             android:label="@string/app_name">
 
         </activity>
+        <!-- Facebook LoginActivity-->
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:configChanges="screenSize|orientation"
+            android:icon="@drawable/actionbar_icon" />
 
         <!-- Search activity -->
         <activity
             android:name="com.menil.rottenmovies.SearchActivity"
             android:configChanges="screenSize|orientation"
             android:icon="@drawable/actionbar_icon"
-            android:label="@string/search_string"
+            android:label="@string/action_search"
             android:launchMode="singleTop"
             android:parentActivityName="com.menil.rottenmovies.Main">
             <intent-filter>
