--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,10 @@ dependencies {
     //for floating action buttons
     compile 'ch.acra:acra:4.5.0'
     //for crash reports
-    compile 'com.sothree.slidinguppanel:library:+'
+    compile 'com.sothree.slidinguppanel:library:2.0.2'
     // for details view
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
-    // for home
+    // for home [unused]
+    compile files('libs/twitter4j-core-4.0.2/twitter4j-core-4.0.2.jar')
     compile project(':facebook')
 }
