--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion '21.1.1'
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
         applicationId "com.menil.rottenmovies"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
-        versionName "0.7-beta"
+        versionName "0.8-beta"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -17,7 +17,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -25,11 +25,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21.0.2'
-    compile 'com.android.support:appcompat-v7:21.0.2'
-    compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:cardview-v7:21.0.3'
     //compile 'com.android.support:support-v13:21.0.2'
-    compile 'com.android.support:support-annotations:21.0.0'
+    compile 'com.android.support:support-annotations:21.0.3'
     compile 'com.google.code.gson:gson:2.3'
     //for parsing JSON
     compile 'com.melnykov:floatingactionbutton:1.0.6'
