--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
-        versionName "0.8-beta"
+        versionName "1.0"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -40,6 +40,6 @@ dependencies {
     // for details view
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
     // for home [unused]
-    compile files('libs/twitter4j-core-4.0.2/twitter4j-core-4.0.2.jar')
+    //compile files('libs/twitter4j-core-4.0.2/twitter4j-core-4.0.2.jar')
     compile project(':facebook')
 }
